--- a/Test02/Views/GiaoHang/CapNhatTrangThaiDonHang.cshtml
+++ b/Test02/Views/GiaoHang/CapNhatTrangThaiDonHang.cshtml
@@ -38,6 +38,7 @@
                     <div class="col-md-10">
                         <select class="form-control" id="TrangThai" name="TinhTrangGH">
                             <option selected="@Model.TinhTrangGH">@Model.TinhTrangGH</option>
+                            <option>Chờ giao</option>
                             <option>Đang giao</option>
                             <option>Đã giao</option>
                         </select>
