--- a/Test02/Views/GiaoHang/DonHangHoan.cshtml
+++ b/Test02/Views/GiaoHang/DonHangHoan.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Test02.Models.DonHang>
 @using Test02.Models;
 @{
-    ViewBag.Title = "DonHangHoan";
+    ViewBag.Title = "DonChoGiao";
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
     ViewBag.gh_donhangmoi = "active";
-    ViewBag.nd = "Danh sách đơn hàng hoàn";
+    ViewBag.nd = "Danh sách đơn chờ giao";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
 }
 
@@ -26,54 +26,77 @@
                 </div>
                 <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
                     <div class="row">
-                        <h2 style="margin-left:29%">DANH SÁCH ĐƠN HÀNG HOÀN</h2>
-
-                        <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
-                            <thead>
-                                <tr role="row">                                
-                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 50px; text-align: center ">Mã Đơn hàng </th>
-                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 70px; text-align: center ">Tên đại lý</th>
-                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 50px; text-align: center ">Số điện thoại đại lý</th>                                    
-                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 150px; text-align: center ">Địa chỉ giao</th>
-                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 100px; text-align: center ">Tình trạng thanh toán</th>
-                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 60px; text-align: center ">Tình trạng giao</th>
-                                    @*<th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 25px; text-align: center ">Cập nhật</th>*@
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var item in Model)
-                                {
-                                    if (item.PhieuXuatKho == true && item.XuatHoaDon == true && item.TinhTrangGH != null && item.TinhTrangGH == "Chờ giao")
+                        <h2 style="margin-left:35%">DANH SÁCH CHỜ GIAO</h2>
+                        <div class="col-sm-12">
+                            <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
+                                <thead>
+                                    <tr role="row">
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 30px; text-align: center ">Mã Đơn hàng </th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 30px; text-align: center ">Mã đại lý</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 100px; text-align: center ">Tên đại lý</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 50px; text-align: center ">Số điện thoại đại lý</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 160px; text-align: center ">Địa chỉ giao</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 100px; text-align: center ">Tình trạng thanh toán</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 60px; text-align: center ">Tình trạng giao</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 25px; text-align: center ">Cập nhật</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model)
                                     {
-                                        <tr>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.MaDH)
-                                            </td>
+                                        if (item.PhieuXuatKho == true && item.XuatHoaDon == true && item.TinhTrangGH != null && item.TinhTrangGH == "Chờ giao")
+                                        {
+                                            <tr>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.MaDH)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.DaiLy.MaDL)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.DaiLy.TenDL)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.DaiLy.SDT)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.DiemGiao)
+                                                </td>
+                                                @if (item.TinhTrangThanhToan == "Chưa thanh toán")
+                                                {
+                                                    <td>
+                                                        <span class="badge bg-danger" style="width:100px">
+                                                            @Html.DisplayFor(modelItem => item.TinhTrangThanhToan)
+                                                        </span>
+                                                    </td>
+                                                }
+                                                else
+                                                {
+                                                    <td>
+                                                        <span class="badge bg-success" style="width:100px">
+                                                            @Html.DisplayFor(modelItem => item.TinhTrangThanhToan)
+                                                        </span>
+                                                    </td>
 
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.DaiLy.TenDL)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.DaiLy.SDT)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.DiemGiao)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.TinhTrangThanhToan)
-                                            </td>
-                                            <td>
-                                                <span class="badge bg-secondary" @*style="width:100px"*@>
-                                                    @Html.DisplayFor(modelItem => item.TinhTrangGH)
-                                                </span>
-                                            </td>                                       
-                                        </tr>
+                                                }
+                                                <td>
+                                                    <span class="badge bg-secondary" @*style="width:100px"*@>
+                                                        @Html.DisplayFor(modelItem => item.TinhTrangGH)
+                                                    </span>
+                                                </td>
+                                                <td style="text-align:center">
+                                                    <a href="/GiaoHang/CapNhatTrangThaiDonHang/@item.MaDH" class="btn btn-primary btn-sm edit">
+                                                        <i class='bx bxs-log-in-circle'></i>
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                        }
                                     }
-                                }
-                            </tbody>
-                        </table>
-                        <div class="col-sm-2">
-                            <a class="btn btn-danger" type="button" title="Quay lại " href="/GiaoHang/DonGiaoHang"><i class=""></i> Quay lại</a>
+                                </tbody>
+                            </table>
+                            <div class="col-sm-2">
+                                <a class="btn btn-danger" type="button" title="Quay lại " href="/GiaoHang/DonGiaoHang"><i class=""></i> Quay lại</a>
+                            </div>
                         </div>
                     </div>
                 </div>
