--- a/Test02/Views/GiaoHang/ThemDonHangVaoChuyenGiao.cshtml
+++ b/Test02/Views/GiaoHang/ThemDonHangVaoChuyenGiao.cshtml
@@ -9,7 +9,7 @@
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
 }
 
-<h3>Tạo chi tiết kho của kho @Session["makho1"]</h3>
+<h3>Thêm đơn hàng vào chuyến giao @Session["donhang"]</h3>
 
 @using (Html.BeginForm())
 {
@@ -22,54 +22,23 @@
             @Html.HiddenFor(model => model.MaDH)
 
             <div class="form-group">
-                @Html.LabelFor(model => model.MaDH, "Mã sản phẩm", htmlAttributes: new { @class = "control-label col-md-5" })
+                @Html.LabelFor(model => model.MaDH, "Mã đơn hàng", htmlAttributes: new { @class = "control-label col-md-5" })
                 <div class="col-md-12">
                     @Html.EditorFor(model => model.MaDH, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.MaDH, "", new { @class = "text-danger" })
                 </div>
             </div>
-
-            @*<div class="form-group">
-                @Html.LabelFor(model => model.SoLuong, "Số lượng /thùng", htmlAttributes: new { @class = "control-label col-md-5" })
-                <div class="col-md-12">
-                    @Html.EditorFor(model => model.SoLuong, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.SoLuong, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.NgayNhap, "Ngày nhập vào kho", htmlAttributes: new { @class = "control-label col-md-5" })
-                <div class="col-md-12">
-                    <input class="form-control text-box single-line" data-val="true" data-val-date="The field NgayNhap must be a date." id="NgayNhap" name="NgayNhap" type="datetime-local" required>
-                    @Html.ValidationMessageFor(model => model.NgayNhap, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
-
             <div class="row form-group justify-content-between" style="margin:auto 12px">
                 <div class="">
-                    <input type="submit" value="Thêm chi tiết kho" class="btn btn-outline-dark" required />
+                    <input type="submit" value="Thêm đơn hàng" class="btn btn-outline-dark" required />
                 </div>
                 <div>
-                    <a class="btn btn-outline-secondary btn-sm" href="~/GiaoHang/ChiTietChuyenGiaoHang/@Session["makho1"]" title="Trở lại">
+                    <a class="btn btn-outline-secondary btn-sm" href="~/GiaoHang/ChiTietChuyenGiaoHang/@Session["donhang"]" title="Trở lại">
                         <i class="fas fa-retweet"></i>
                         Trở lại
                     </a>
                 </div>
             </div>
-
         </div>
-        @*<div class="col-6">
-
-            <label for="sel2" class="form-label"><h4>Tra cứu tên sản phẩm và mã sản phẩm</h4></label> <br />
-            <select multiple class="form-select form-select-lg h-100 w-100 border-0" id="sel2" style="background-color: #f5f5f5; ">
-
-                @foreach (var item in dssp)
-                {
-                    <option>
-                        <span>@Html.DisplayFor(modelItem => item.TenSP) --- <span style="color:blue">@Html.DisplayFor(modelItem => item.MaSP)</span> </span>
-                    </option>
-                }
-            </select>
-        </div>*@
     </div>
 }
