--- a/Test02/Views/KinhDoanh/QuanLyDL.cshtml
+++ b/Test02/Views/KinhDoanh/QuanLyDL.cshtml
@@ -31,7 +31,7 @@
 
 <div class="col-md-12">
     <div class="tile">
-        <h3 class="tile-title">Tình trạng đơn hàng</h3>
+        <h3 class="tile-title">Tình trạng đại lý</h3>
         <div class="row element-button">
             <div class="col-sm-2">
                 <a class="btn btn-delete btn-sm nhap-tu-file" @*data-toggle="modal" data-target="#myModal"*@ href="/KinhDoanh/ThemDL"><i class="fas fa-file-upload"></i> Thêm mới hồ sơ</a>
@@ -54,8 +54,8 @@
                 <thead>
                     <tr>
                         <th data-a-h="center" data-a-v="middle" data-b-a-s="thick" data-f-bold="true">Mã đại lý</th>
-                        <th data-a-h="center" data-a-v="middle" data-b-a-s="thick" data-f-bold="true">Tên đại lý</th>
                         <th data-a-h="center" data-a-v="middle" data-b-a-s="thick" data-f-bold="true">Loại đại lý</th>
+                        <th data-a-h="center" data-a-v="middle" data-b-a-s="thick" data-f-bold="true">Tên đại lý</th>
                         <th data-a-h="center" data-a-v="middle" data-b-a-s="thick" data-f-bold="true">Địa chỉ</th>
                         <th data-a-h="center" data-a-v="middle" data-b-a-s="thick" data-f-bold="true">Số điện thoại</th>
                         <th data-a-h="center" data-a-v="middle" data-b-a-s="thick" data-f-bold="true">Địa chỉ email</th>
